# inzynieria_finansowa_2

./: Master v1.1.ipynb  Master v1.2.ipynb  Zadanie1.ipynb  import_data.ipynb  master v1.01 .ipynb  master v1.02 .ipynb  master v1.ipynb  master.py  pyproject.toml  zadanie_1.ipynb  zadanie_2.ipynb  zadanie_3.ipynb
data/: market_data.xlsx
lib/: binary_option.py  dates.py  digital_option.py  import_data.py  master.py  vanilla_option.py  vanilla_option_black_sholes.py  vanilla_option_vanna_volga.py  vanna_volga.py
