[project]
name = "inzynieria-finansowa-2"
version = "0.1.0"
description = "Zaliczenie Inżynierii Finansowej 2 w roku akademickim 2025/26."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name="Gabiel Gryglas"},
    {name="Filip Fijałkowski"}
]
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
]
